<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recipe_detail_bookmark_button"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="true"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/recipe_id_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recipe ID" />

        <TextView
            android:id="@+id/recipe_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_title"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/recipe_detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_bookmark" />

        <TextView
            android:id="@+id/recipe_detail_ingredient_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_ingredient_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recipe_detail_ingredient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_ingredient_list" />

        <TextView
            android:id="@+id/recipe_detail_instructions_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_instructions_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recipe_detail_instructions_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_instructions_list" />

        <TextView
            android:id="@+id/recipe_detail_nutrition_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_nutrition_title"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/recipe_detail_nutrition_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_detail_nutrition_list" />


    </LinearLayout>
</ScrollView>