<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/dialog_filter_search_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_filter_search_title"
        android:textAlignment="center"
        android:textSize="16sp" />

    <ScrollView
        android:layout_width="380dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/dialog_filter_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dialog_filter_list_title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/dialog_filter_dairy_free_checkbox"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_filter_dairy_free_checkbox" />

                <CheckBox
                    android:id="@+id/dialog_filter_gluten_free_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_filter_gluten_free_checkbox" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/dialog_filter_vegetarian_checkbox"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_filter_vegetarian_checkbox" />

                <CheckBox
                    android:id="@+id/dialog_filter_vegan_checkbox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_filter_vegan_checkbox" />
            </LinearLayout>

            <TextView
                android:id="@+id/dialog_ingredient_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="14dp"
                android:text="@string/dialog_ingredient_list_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/dialog_filter_ingredients_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fadeScrollbars="false"
                    android:scrollbars="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_max="310dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/add_to_bookmark_confirm_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="false"
            android:layout_centerHorizontal="true"
            android:layout_gravity="end"
            android:text="@string/dialog_filter_search_button" />
    </RelativeLayout>
</LinearLayout>
